# schemajen

./: Cargo.toml  LICENSE  README.md  in  index.html  schemajen.wasm  script.js  style.css
.github/workflows/: static.yml
src/: lib.rs  test.rs  wasm.rs
src/codegen/: dart.rs  java.rs  kotlin.rs  mock.rs  mod.rs  python.rs  rust.rs  swift.rs  typescript.rs
