[package]
name = "schemajen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "schemajen"
path = "./bin/schemajen.rs"

[dependencies]
json = "0.12.4"

# WASM

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown", target_env = ""))'.dependencies]
wasm-bindgen = "0.2.63"
wee_alloc="0.4.5"
