[package]
name = "schemajen"
version = "0.1.0"
edition = "2021"
description = "SchemaJen - Auto-magically infer language bindings given a JSON schema."
repository = "https://github.com/davnotdev/schemajen"
homepage = "https://github.com/davnotdev/schemajen"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "schemajen"
path = "./bin/schemajen.rs"

[dependencies]
json = "0.12.4"

# WASM

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown", target_env = ""))'.dependencies]
wasm-bindgen = "0.2.63"
